src/zojax/portlets/imagerotator/resources/styles.css
/* zrt-cssregistry: */

@media all { 

  
/* image rotator */

.imagerotator-container {
  float: left;
  position: relative;
  overflow: hidden;
}
.imagerotator-container .banners,
.imagerotator-container .banners .banner-item {        
  width: 984px;
  overflow: hidden;
  position: relative;
}
.imagerotator-container .banners .banner-item,
.imagerotator-container .banners .item-text,
.imagerotator-container .banners .item-image,
.imagerotator-container .banners .item-url {
  top: 0;
  left: 0;
  position: absolute;
}
.imagerotator-container .banner-item {
  z-index: 68;
}

.imagerotator-container .banner-item.first {
  z-index: 78;
}

.imagerotator-container .banner-item.first .item-text {
  z-index: 79;
}

.imagerotator-container .item-text {
  z-index: 71;
}

.imagerotator-container .banners .item-url {
  width:100%;
}
.imagerotator-container .banners .item-text {
  display: block;
  /*height: 177px; width: 230px;*/
  float: right;
  left: auto;
  right: 0;
  padding: 40px 40px 0 0;
}
.imagerotator-container .banners .item-text div {
  font-size: 22px;
  line-height: 26px;
  color: #fff;
  /*height: 97px; width: 190px;*/
  padding: 30px 20px; /*30px 20px 45px 20px*/
  background: transparent url(portlet-imagerotator/images/bg-gray-1x1.png) repeat left top;
}
.imagerotator-container .thumbs {
  display: none;
  height: 47px;
  width: 980px;
  padding-top: 6px;
  background: transparent url(portlet-imagerotator/images/bg-white-1x1.png) repeat left top;
  bottom: 0;
  position: absolute;
  z-index: 80;
}
.imagerotator-container .thumbs a {
  display: block;
  float: left;
  margin: 0 5px;
  height: 41px;
  width: 50px;
}
.imagerotator-container .thumbs a img {
  background: transparent;
  filter: alpha(Opacity=50);
  -moz-opacity: 0.5; 
  -khtml-opacity: 0.5; 
   opacity: 0.5; 
}
.imagerotator-container .thumbs a.active img, 
.imagerotator-container .thumbs a:hover img {
  background: transparent;
  filter: alpha(Opacity=100);
  -moz-opacity: 1.0; 
  -khtml-opacity: 1.0; 
   opacity: 1.0; 
}

.imagerotator-container .buttons ul li:hover {
  background: transparent;
}
.imagerotator-container .buttons ul li .buttons-item,
.imagerotator-container .buttons li .buttons-block { 
  background: url(portlet-imagerotator/images/bg-white-1x1.png) repeat left top transparent;
}
.imagerotator-container .buttons ul li { 
  display: block; 
  float: left;
  height: 47px; 
  width: 241px; 
  margin-right: 5px; 
}.imagerotator-container .buttons ul li.last-button {
  margin-right: 0; 
}
.imagerotator-container .buttons ul li a.buttons-item {
  display: block; 
  float: left;
  height: 32px; 
  width: 206px;  
  text-align: left;
  padding-left: 35px;
  padding-top: 15px;
}
.imagerotator-container .buttons ul li.last-button .buttons-item {
  width: 207px;
}
.imagerotator-container .buttons {
  bottom: 0;
  height: 47px;
  position: absolute;
  width: 980px;
  z-index: 80;
}
.imagerotator-container .buttons-block span,
.imagerotator-container .buttons ul li .buttons-item {
  font-size: 16px;
  font-family: "Lucida Grande";
  letter-spacing: 6px;
  color: #323844;
  text-transform: uppercase;
}
.imagerotator-container .buttons li .buttons-block {
  position: absolute;
  bottom: 0;
  text-align: left;
  padding: 0 5px 0 5px;
  width: 231px;
  font-size: 12px;
}
.imagerotator-container .buttons li.last-button .buttons-block {
  padding: 0 6px 0 6px;
}
.imagerotator-container .buttons li .buttons-block img {
  padding-top: 5px;
}
.imagerotator-container .buttons-block {
 display: none;
}
.imagerotator-container .buttons-block span {
  border-bottom: 1px solid #84889A;
  display: block;
  width: 170px;
  padding: 15px 15px 7px 15px;
  margin: 0 15px;
}
.imagerotator-container .buttons-block p {
  font-size: 13px;
  padding: 15px 30px 0 30px;
  margin: 0;
}
.imagerotator-container .buttons-block a {
  color: #454545;
}

/* width740 */
.width740,
.width740 .banners,
.width740 .banners .banner-item,
.width740 .thumbs,
.width740 .buttons {
  width: 740px;
}
.width740 .banners .item-text{
  padding: 20px 20px 0 0;
}

/* spinner */

.imagerotator-container .banners .preloader {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1000;
  width: 984px; 
  height: 100%;
  background: #fff url(portlet-imagerotator/images/spinner.gif) center center no-repeat;
}
}

